fix overlapping

--- a/resources/front/css/home.css
+++ b/resources/front/css/home.css
@@ -50,3 +50,7 @@
   min-width: auto;
 }
 
+.carousel-inner {
+  margin-bottom: 80px; /* adjust the value as needed */
+}
+
